--- a/JenkinsFile
+++ b/JenkinsFile
@@ -10,6 +10,7 @@ pipeline {
 
         stage('Testing') {
             steps {
+                sh 'cd temp_repo_mlprod_m2_jenkins'
                 sh 'pip install -r requirements.txt'
                 sh 'pytest'
             }
